1、修改歌单详情内容溢出后没有显示滚动条的问题

--- a/src/ListenTogether/Pages/MyFavoriteDetailPage.xaml
+++ b/src/ListenTogether/Pages/MyFavoriteDetailPage.xaml
@@ -56,7 +56,8 @@
             </StackLayout>
         </StackLayout>
 
-        <CollectionView ItemsSource="{Binding MyFavoriteMusics}"
+        <CollectionView VerticalOptions="FillAndExpand"
+                        ItemsSource="{Binding MyFavoriteMusics}"
                         IsVisible="{Binding IsNotBusy}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
