1、优化变量名

--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -31,7 +31,7 @@
 
                     <!--用户模块-->
                     <StackLayout VerticalOptions="Start"
-                                 IsVisible="{Binding IsShowLoginBlock}">
+                                 IsVisible="{Binding IsOnlineApp}">
                         <!--未登录-->
                         <StackLayout VerticalOptions="Start"
                                  IsVisible="{Binding UserInfo, Converter={StaticResource IsEqualConverter}}">
