--- a/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
+++ b/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
@@ -4,7 +4,8 @@
                     x:Class="ListenTogether.Resources.Styles.DefaultTheme">
 
     <Color x:Key="LightLogo">#C98FFF</Color>
-    <Color x:Key="LightBackground">#F7F7F7</Color>
+    <Color x:Key="LightAppNetwork">#C98FFF</Color>
+    <Color x:Key="LightBackground">#767676</Color>
     <Color x:Key="LightTitle">#262626</Color>
     <Color x:Key="LightText">#262626</Color>
     <Color x:Key="LightTextSecond">#717171</Color>
@@ -18,8 +19,9 @@
     <Color x:Key="LightBtnText">#000000</Color>
     <Color x:Key="LightFeeText">#D892FF</Color>
     <Color x:Key="LightLink">#0366D6</Color>
-    
+
     <Color x:Key="DarkLogo">#C98FFF</Color>
+    <Color x:Key="DarkAppNetwork">#929292</Color>
     <Color x:Key="DarkBackground">#242424</Color>
     <Color x:Key="DarkTitle">#FCF2F7</Color>
     <Color x:Key="DarkText">#FCF2F7</Color>
@@ -34,7 +36,7 @@
     <Color x:Key="DarkBtnText">#FFFFFF</Color>
     <Color x:Key="DarkFeeText">#D892FF</Color>
     <Color x:Key="DarkLink">#2F88ED</Color>
-    
+
     <Style TargetType="Label"
            x:Key="Logo">
         <Setter Property="FontSize"
@@ -43,6 +45,14 @@
                 Value="blod"/>
         <Setter Property="TextColor"
                 Value="{AppThemeBinding Light={StaticResource LightLogo}, Dark={StaticResource DarkLogo}}" />
+    </Style>
+
+    <Style TargetType="Label"
+           x:Key="AppNetwork">
+        <Setter Property="FontSize"
+                Value="13" />
+        <Setter Property="TextColor"
+                Value="{AppThemeBinding Light={StaticResource LightAppNetwork}, Dark={StaticResource DarkAppNetwork}}" />
     </Style>
 
     <Style TargetType="Label"
@@ -96,5 +106,5 @@
         <Setter Property="TextColor"
                 Value="{AppThemeBinding Dark={StaticResource DarkBtnText},Light={StaticResource LightBtnText}}"/>
     </Style>
- 
+
 </ResourceDictionary>
