--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -90,6 +90,9 @@
                         <JiuLing:TextSwitch Text="网易云音乐"
                                             IsToggled="{Binding IsEnableNetEase}"/>
 
+                        <JiuLing:TextSwitch Text="酷我音乐"
+                                            IsToggled="{Binding IsEnableKuWo}"/>
+                        
                         <JiuLing:TextSwitch Text="酷狗音乐"
                                             IsToggled="{Binding IsEnableKuGou}"/>
 
